--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,6 +14,12 @@
             "request": "launch",
             "type": "dart",
             "flutterMode": "profile"
+        },
+        {
+            "name": "vu-truong-nam (release mode)",
+            "request": "launch",
+            "type": "dart",
+            "flutterMode": "release"
         }
     ]
 }
