--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,6 @@ dependencies:
   introduction_screen: ^2.1.0
   intl: ^0.17.0
   image_picker: 
-  cloud_firestore: 
   firebase_storage: ^10.0.5
   path_provider: ^2.0.5
   shimmer: ^2.0.0
@@ -53,6 +52,7 @@ dependencies:
   google_maps_flutter: ^2.1.0
   flutter_switch: ^0.3.2
   google_maps_cluster_manager: ^3.0.0+1
+  cloud_firestore: ^3.1.6
 
 dev_dependencies:
   flutter_test:
